[package]
name = "lobby_system"
version = "0.1.0"
authors = ["gwynart <gwyn.artstyle@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rand = "0.7.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
validator = "0.9.0"
validator_derive = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]


